[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mouse_ran_down"
authors = [{name = "Andy Kluger"}]
readme = "README.md"
dynamic = ["version", "description"]
license = {file = "LICENSE"}
urls = {Home = "https://github.com/AndydeCleyre/mouse-ran-down"}
requires-python = ">=3.13"
dependencies = ["mutagen", "pillow", "gallery-dl", "instagrapi", "instaloader", "plumbum", "pyTelegramBotAPI", "stamina", "structlog", "yt-dlp[curl-cffi]"]
keywords= [
  "Bandcamp",
  "Bluesky",
  "Instagram",
  "Reddit",
  "SoundCloud",
  "Telegram",
  "TikTok",
  "Twitter",
  "Vimeo",
  "X",
  "YouTube",
  "yt-dlp",
]
classifiers = [
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["annotated-types==0.7.0", "certifi==2025.1.31", "cffi==1.17.1", "charset-normalizer==3.4.1", "curl-cffi==0.10.0", "flit", "gallery-dl==1.29.3", "idna==3.10", "instagrapi==2.1.3", "instaloader==4.14.1", "ipython", "pillow==11.1.0", "plumbum==1.9.0", "pycparser==2.22", "pycryptodomex==3.21.0", "pydantic-core==2.27.1", "pydantic==2.10.1", "pyright", "pysocks==1.7.1", "pytelegrambotapi==4.26.0", "requests==2.32.3", "rich", "ruff", "ssort", "stamina==25.1.0", "structlog==25.2.0", "tenacity==9.1.2", "typing-extensions==4.13.1", "urllib3==2.3.0", "yt-dlp==2025.3.31"]

[project.scripts]
mouse-ran-down = "mouse_ran_down.main:main"

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.ruff.format]
quote-style = "preserve"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "BLE",
  "COM812",
  "EM",
  "FIX",
  "ISC001",
  "PERF203",
  "PGH003",
  "Q000",
  "T20",
  "TC006",
  "TD002", "TD003",
  "TRY003", "TRY203", "TRY400"
]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.pylint]
max-args = 6
